<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popupView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:padding="10px"
    android:orientation="vertical"
    android:gravity="center"
>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deleteAppointment"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/delAllButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:background="@color/CornflowerBlue"
                    android:layout_marginRight="1dp"
                    android:text="@string/deleteAll"/>

                <Button
                    android:id="@+id/selDelButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/selectToDelete"
                    android:background="@color/CornflowerBlue"
                    android:layout_marginLeft="1dp"/>
            </LinearLayout>


        </LinearLayout>
</ScrollView>
</LinearLayout>