<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/updatePopupView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:padding="10px"
    android:orientation="vertical"
    android:gravity="center"
>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updateAppointment"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updateHeading"/>


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="119dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titleTextView"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/titleEditText"
                    android:layout_width="395dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:ems="10"
                    android:hint=""
                    android:inputType="text"/>


                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timeTextView"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/timeEditText"
                    android:layout_width="395dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:ems="10"
                    android:hint=""
                    android:inputType="time"/>


                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detailsTextView"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/detailsEditText"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginBottom="30dp"
                    android:ems="10"
                    android:hint=""
                    android:inputType="textMultiLine"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/selDelButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/update"
                    android:background="@color/CornflowerBlue"
                    android:layout_marginLeft="1dp"/>
            </LinearLayout>


        </LinearLayout>
</ScrollView>
</LinearLayout>