<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    tools:context="com.apareciumlabs.brionsilva.madscheduler.HomeScreen">


    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="34dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.489" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@+id/calendarView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="1.0"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/createAppointmentButton"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@color/customPurple"
                android:text="@string/createAppointment" />


            <Button
                android:id="@+id/viewEditButton"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@color/customPurple"
                android:text="@string/viewEdit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deleteAppointmentButton"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@color/customPurple"
                android:text="@string/deleteAppointment" />

            <Button
                android:id="@+id/moveAppointmentButton"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@color/customPurple"
                android:text="@string/moveAppointment" />
        </LinearLayout>

        <Button
            android:id="@+id/searchButton"
            android:height="55dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:background="@color/customPurple"
            android:text="@string/search" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
